<resources>
    <string name="app_name">停车导航</string>

    <string name="action_test">城市</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="action_findcar">寻车</string>
    <string name="action_findplace">找商家</string>
    <string name="action_managemap">地图管理</string>
    <string name="action_settings">设置</string>

    <string name="action_refresh">刷新</string>
    <string name="action_park">停车</string>
    <string name="action_leave">离开</string>
    <string name="action_search">搜索</string>

    <string-array name="units">
        <item>世纪中心</item>
        <item>金融广场</item>
        <item>中山公园</item>
        <item>虹桥机场</item>
        <item>浦东机场</item>
        <item>上海南站</item>
        <item>科技馆</item>
    </string-array>

    <string name="title_activity_my_list">停车导航</string>
    <string name="navigate_map">导航地图</string>
    <string name="parking_list">车库列表</string>
    <string name="hello_world">Find Car</string>

    <string name="bright_beacon">蓝牙例子</string>
    <string name="configure_beacon">注册信标</string>
    <string name="title_config_beacon">注册蓝牙信标</string>
    <string name="title_brt_beacon">蓝牙例子</string>

    
</resources>
