<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/button_goUrl"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/action_refresh"
            android:textSize="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/action_park"
            android:textSize="10dp"
            android:id="@+id/btnPark" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/action_leave"
            android:textSize="10dp"
            android:id="@+id/btnLeave" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/txtKeywords"
            android:layout_weight="1"
            android:textSize="10dp"
            android:text="KFC" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/action_search"
            android:textSize="10dp"
            android:id="@+id/btnSearch" />

    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>